--- a/The Horse/data/horse/powers/leash/leash.json
+++ b/The Horse/data/horse/powers/leash/leash.json
@@ -284,7 +284,7 @@
 									"type": "origins:if_else",
 									"condition": {
 										"type": "origins:resource",
-										"resource": "*:optional_power/leash/leash_anchor_tied",
+										"resource": "*:leash/leashanchor_tied",
 										"compare_to": 1,
 										"comparison": "=="
 									},
